--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
-    "react-toastify": "^10.0.4",
-    "sweetalert2": "^11.10.2"
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
